Adding some JDK update enhancements; removing no longer used env vars, and re addign back preservation cihm aip backup